@@ -58,11 +58,11 @@ public class TodoService {
 
             // todoCheck 값이 true인 TodoEntity만 필터링
             List<TodoEntity> filteredTodos = allTodos.stream()
-                    .filter(todoEntity -> todoEntity.isTodoCheck()) // boolean 값 확인
-                    .collect(Collectors.toList());
+                    .filter(TodoEntity::isTodoCheck) // boolean 값 확인
+                    .toList();
 
             List<TodoDTO> todoDTOList = filteredTodos.stream()
-                    .map(todoEntity -> TodoMapper.INSTANCE.toDTO(todoEntity))
+                    .map(TodoMapper.INSTANCE::toDTO)
                     .collect(Collectors.toList());
 
             return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
@@ -73,9 +73,9 @@ public class TodoService {
     }
 
 
-    public ResponseData<List<TodoDTO>> search(TodoDTO todoDTO) {
-        String keyword = todoDTO.getTodoTitle(); // 키워드 추출
-        Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoTitleContaining(keyword);
+    public ResponseData<List<TodoDTO>> searchTitle(TodoDTO todoDTO) {
+        String Titlekeyword = todoDTO.getTodoTitle(); // 키워드 추출
+        Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoTitleContaining(Titlekeyword);
 
         if (todoEntities.isPresent() && !todoEntities.get().isEmpty()) {
             List<TodoDTO> todoDTOList = todoEntities.get().stream()
@@ -88,11 +88,20 @@ public class TodoService {
         }
     }
 
+    public ResponseData<List<TodoDTO>> searchCategory(TodoDTO todoDTO) {
+        String Categorykeyword = todoDTO.getTodoTitle(); // 키워드 추출
+        Optional<List<TodoEntity>> todoEntities = todoRepository.findByTodoCategory(Categorykeyword);
 
-
-
-
-
+        if (todoEntities.isPresent() && !todoEntities.get().isEmpty()) {
+            List<TodoDTO> todoDTOList = todoEntities.get().stream()
+                    .filter(TodoEntity::isTodoCheck) // todoCheck가 true인 엔티티만 필터링
+                    .map(TodoMapper.INSTANCE::toDTO)
+                    .collect(Collectors.toList());
+            return ResponseData.res(StatusCode.OK, Success.TRUE, todoDTOList);
+        } else {
+            return ResponseData.res(StatusCode.BAD_REQUEST, Success.FALSE, null);
+        }
+    }
 
 
 
